2002-03-21  wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	
	* TextPlain.pm: New module.