@@ -1,0 +1,5 @@
+
+RMV = rm -fv
+
+clean:
+	$(RMV) *.BAK .*.BAK *~ .*~
