@@ -1,3 +1,8 @@
+2002-06-01  wakaba <w@suika.fam.cx>
+
+	* TextPlain.pm: Reimplemented with parent class
+	Message::Field::Structured.
+
 2002-03-21  wakaba <w@suika.fam.cx>
 
 	* ChangeLog: New file.
